<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="10dip"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/relativeLayout1"
        android:paddingBottom="20dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="10dip"
        android:src="@drawable/festival_app" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:background="@drawable/btn_black"
        android:onClick="openLineup"
        android:text="@string/button_lineup"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_black"
        android:onClick="openNews"
        android:text="@string/button_news"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_black"
        android:onClick="openRunningOrder"
        android:text="@string/button_running_order"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/imageView1" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/main_news_subject"
                android:textAppearance="?android:attr/textAppearanceMedium" />

<!--             <TextView
                android:id="@+id/msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="Msg"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/subject"
                android:textColor="#98AFC7" /> -->

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_news_date"
                android:layout_below="@+id/subject"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_below="@+id/relativeLayout2">

            <TextView
                android:id="@+id/info"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Info"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>