<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="10dip"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/relativeLayout1"
        android:paddingBottom="20dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="10dip"
        android:src="@drawable/festival_app" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Days"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/counterMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counter"
        android:layout_centerHorizontal="true"
        android:text="Till Hell Will Open" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:background="@drawable/btn_black"
        android:onClick="openLineup"
        android:text="@string/button_lineup"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_black"
        android:onClick="openNews"
        android:text="@string/button_news"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_black"
        android:onClick="openRunningOrder"
        android:text="@string/button_running_order"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/imageView1" >

        <TextView
            android:id="@+id/currBand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="CurrBand"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/nextBand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="NextBand"
            android:layout_below="@+id/currBand"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#98AFC7" />
    </RelativeLayout>

</RelativeLayout>